# openapi-validator

./: .gitignore  .oavc  .release-please-manifest.json  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  README.md  release-please-config.json
.cargo/: audit.toml
.github/: dependabot.yml
.github/scripts/: update-cask.sh  update-formula.sh
.github/workflows/: audit.yml  ci.yml  release.yml  test-action.yml
Casks/: oav-gui.rb
Formula/: lazyoav.rb  oav.rb
action/validate/: summary.sh
crates/cli/: .oavc  CHANGELOG.md  Cargo.toml  README.md  install.sh
crates/cli/.github/workflows/: release.yml
crates/cli/action/setup/: action.yml  install.sh
crates/cli/action/validate/: action.yml  validate.sh
crates/cli/assets/skills/oav/: SKILL.md  reference.md
crates/cli/docs/: GITHUB_ACTION.md
crates/cli/examples/: README.md
crates/cli/examples/client-only/: .oavc  README.md
crates/cli/examples/custom-generators/: README.md
crates/cli/examples/custom-generators/generators/: swift5.yaml
crates/cli/examples/custom-linter/: .oavc  README.md
crates/cli/examples/lint-only/: .oavc  README.md
crates/cli/examples/server-and-client/: .oavc  README.md
crates/cli/src/: agent.rs  cli.rs  completions.rs  config.rs  custom.rs  docker.rs  fetch.rs  generators.rs  json_report.rs  lib.rs  output.rs  util.rs
crates/cli/src/steps/: compile.rs  generate.rs  lint.rs  mod.rs  report.rs
crates/cli/tests/: agent.rs  config.rs  discover.rs  examples.rs  init.rs  validate.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/: valid.json  valid.yml
crates/gui/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tauri.conf.json
crates/gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/gui/frontend/src/: App.tsx  api.ts  hooks.ts  main.tsx  types.ts
crates/gui/frontend/src/components/: EditorPane.tsx  PipelinePanel.tsx  UrlModal.tsx
crates/gui/icons/: icon.icns
crates/gui/src/: App.css  App.tsx  commands.rs  main.tsx
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/src/: main.rs
crates/gui/src/components/: ConfigPanel.tsx  EditorPane.tsx  FixModal.tsx  PipelinePanel.tsx  Toolbar.tsx
crates/lib/: CHANGELOG.md  Cargo.toml
crates/lib/src/: config.rs  custom.rs  fetch.rs  fix.rs  generators.rs  lib.rs  log_parser.rs  scaffold.rs  spec.rs  trace.rs
crates/lib/src/docker/: engine.rs  mod.rs  run.rs  types.rs
crates/lib/src/fix/: rules.rs
crates/lib/src/pipeline/: commands.rs  mod.rs  orchestrator.rs  types.rs
crates/tui/: CHANGELOG.md  Cargo.toml  README.md  install.sh
crates/tui/src/: custom.rs  lib.rs  main.rs  scaffold.rs
crates/tui/src/app/: state.rs  trace.rs
crates/tui/src/config/: loader.rs  types.rs
crates/tui/src/fix/: mod.rs
crates/tui/src/log_parser/: mod.rs
crates/tui/src/pipeline/: commands.rs  mod.rs  orchestrator.rs
crates/tui/src/spec/: discovery.rs  mod.rs
crates/tui/src/ui/panels/: code_browser.rs  diff_browser.rs  spec_context.rs
crates/tui/tests/: pipeline_docker.rs
docs/: GITHUB_ACTION.md
examples/custom-generators/: .oavc
examples/custom-generators/generators/: rust-axum.yaml
examples/server-and-client/generator-configs/: spring.yaml  typescript-axios.yaml
src/: cli.rs  config.rs  custom.rs  docker.rs  fetch.rs  generators.rs  json_report.rs  lib.rs  output.rs  util.rs
src/app/: browser.rs
src/highlight/: mod.rs
src/pipeline/: orchestrator.rs  types.rs
src/steps/: compile.rs  generate.rs  lint.rs  mod.rs
src/ui/: style.rs
src/ui/panels/: errors.rs  phases.rs
tests/: clean.rs  cli.rs  completions.rs  config.rs  init.rs  validate.rs
tests/fixtures/: invalid.json
