[package]
name = "oav"
version = "0.6.0"
edition = "2024"
description = "OpenAPI Validator CLI for linting, generating, and compiling OpenAPI specs locally"
license = "EUPL-1.2"
repository = "https://github.com/entur/openapi-validator-cli"
rust-version = "1.92.0"

[[bin]]
name = "oav"
path = "src/bin/oav.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
dialoguer = "0.12"
include_dir = "0.7"
indicatif = "0.18"
libc = "0.2"
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
yaml_serde = "0.10"
walkdir = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.24"
