[package]
name = "oav-cli"
version = "0.7.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI Validator CLI for linting, generating, and compiling OpenAPI specs locally"

[lib]
name = "oav"
path = "src/lib.rs"

[[bin]]
name = "oav"
path = "src/bin/oav.rs"

[dependencies]
oav-lib = { path = "../lib", features = ["clap"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
dialoguer = "0.12"
include_dir = "0.7"
indicatif = "0.18"
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
ureq = "3"
yaml_serde = "0.10"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.24"
