[package]
name = "oav-lib"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for the openapi-validator CLI and TUI"
publish = false

[features]
clap = ["dep:clap"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
yaml_serde = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
