[package]
name = "oav-lib"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for the openapi-validator CLI and TUI"
publish = false

[features]
clap = ["dep:clap"]
fetch = ["dep:ureq"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
yaml_serde = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }
shell-words = "1.1"
ureq = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.24"
