[package]
name = "oav-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A TUI for exploring, linting, and fixing OpenAPI specs interactively"

[lib]
name = "lazyoav"
path = "src/lib.rs"

[[bin]]
name = "lazyoav"
path = "src/main.rs"

[dependencies]
oav-lib = { path = "../lib" }
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
yaml_serde = "0.10"
include_dir = "0.7"
shell-words = "1.1.1"
similar = "3"
syntect = "5"
two-face = { version = "0.5", default-features = false, features = ["syntect-onig"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.24"
